--- a/moe/static/css/bootstrap.css
+++ b/moe/static/css/bootstrap.css
@@ -1705,6 +1705,9 @@ output {
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
           transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+.mono-form {
+  font-family: "Courier New";
+}
 .form-control:focus {
   border-color: #66afe9;
   outline: 0;
