updated online docs

--- a/_modules/moe/tests/views/rest/gp_ei_test.html
+++ b/_modules/moe/tests/views/rest/gp_ei_test.html
@@ -198,7 +198,7 @@
                     <span class="n">cpp_gp</span><span class="p">,</span>
                     <span class="bp">None</span><span class="p">,</span>
                     <span class="p">)</span>
-            <span class="c"># TODO(sclark): (GH-99) Change test case to have the right shape:</span>
+            <span class="c"># TODO(GH-99): Change test case to have the right shape:</span>
             <span class="c"># (num_to_evaluate, num_to_sample, dim)</span>
             <span class="c"># Here we assume the shape is (num_to_evaluate, dim) so we insert an axis, making num_to_sample = 1.</span>
             <span class="c"># Also might be worth testing more num_to_sample values (will require manipulating C++ RNG state).</span>
