--- a/_modules/moe/views/gp_next_points_pretty_view.html
+++ b/_modules/moe/views/gp_next_points_pretty_view.html
@@ -347,7 +347,7 @@
                 <span class="n">num_mc_iterations</span><span class="o">=</span><span class="n">num_mc_iterations</span><span class="p">,</span>
                 <span class="p">)</span>
 
-        <span class="c"># TODO(eliu): (GH-89) Make the optimal_learning library handle this case &#39;organically&#39; with</span>
+        <span class="c"># TODO(GH-89): Make the optimal_learning library handle this case &#39;organically&#39; with</span>
         <span class="c"># reasonable default behavior and remove hacks like this one.</span>
         <span class="k">if</span> <span class="n">gaussian_process</span><span class="o">.</span><span class="n">num_sampled</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
             <span class="c"># If there is no initial data we bootstrap with random points</span>
