--- a/_modules/moe/views/rest/gp_ei.html
+++ b/_modules/moe/views/rest/gp_ei.html
@@ -314,7 +314,7 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">params</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_params_from_request</span><span class="p">()</span>
 
-        <span class="c"># TODO(sclark): (GH-99) Change REST interface to give points_to_evaluate with shape</span>
+        <span class="c"># TODO(GH-99): Change REST interface to give points_to_evaluate with shape</span>
         <span class="c"># (num_to_evaluate, num_to_sample, dim)</span>
         <span class="c"># Here we assume the shape is (num_to_evaluate, dim) so we insert an axis, making num_to_sample = 1.</span>
         <span class="n">points_to_evaluate</span> <span class="o">=</span> <span class="n">numpy</span><span class="o">.</span><span class="n">array</span><span class="p">(</span><span class="n">params</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s">&#39;points_to_evaluate&#39;</span><span class="p">))[:,</span> <span class="n">numpy</span><span class="o">.</span><span class="n">newaxis</span><span class="p">,</span> <span class="p">:]</span>
